--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,7 @@
 /* CSS styles here */
+body{
+    font-size: 16px;
+    color: white;
+    background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
